--- a/src/output.css
+++ b/src/output.css
@@ -871,10 +871,6 @@ body {
       }
     }
     section#skills {
-      img {
-        width: 80px;
-        height: 80px;
-      }
       h4::before {
         counter-increment: section 2;
         content: "0" counter(section) ".";
@@ -976,10 +972,6 @@ body {
   }
   footer {
     font-size: 0.8em;
-    img {
-      width: 36px;
-      height: 36px;
-    }
     svg:hover {
       filter: brightness(0) saturate(100%) invert(27%) sepia(99%)
         saturate(1414%) hue-rotate(282deg) brightness(88%) contrast(98%);
@@ -1065,15 +1057,12 @@ body {
           transform: rotate(180deg);
         }
       }
-      /* nav:scrollbar-color{
-        background-color: var(--nav-background);
-      }  */
     }
     main {
       section#skills {
-        img {
-          width: 100px;
-          height: 105px;
+        svg {
+          width: 75px;
+          height: 75px;
         }
       }
       section#projects {
@@ -1220,24 +1209,6 @@ body {
 
   .max-md\:gap-4{
     gap: 1rem;
-  }
-
-  .max-md\:overflow-hidden{
-    overflow: hidden;
-  }
-
-  .max-md\:overflow-x-hidden{
-    overflow-x: hidden;
-  }
-
-  .max-md\:overflow-y-hidden{
-    overflow-y: hidden;
-  }
-
-  .max-md\:truncate{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 
   .max-md\:text-left{
